syntax = "proto3";

option csharp_namespace = "GrpcCouponService";

service DiscountProtoService {
  rpc GetDiscount(GetDiscountRequest) returns (CouponModel);
}

message GetDiscountRequest {
  string couponCode = 1;
}

message CouponModel {
  int32 id = 1;
  string couponCode = 2;
  double discountAmount = 3;
  int32 minAmount = 4;
}
